fixing line wrapping height issues

--- a/css/app.css
+++ b/css/app.css
@@ -88,6 +88,7 @@ nav.navbar-secondary {
 .link_list_item a {
     padding: 0 20px;
     border-right: 1px solid #ccc;
+    line-height: 1.4em;
 }
 
 .document_list h3 {
@@ -102,4 +103,11 @@ span.header_icon {
     margin-right: 10px;
     padding: 7px 5px 5px;
     text-align: center;
+    margin-top: 20px;
+    float: left;
+}
+
+.infopack h2 {
+    float: left;
+    line-height: 1.4em
 }
